--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,7 +1,70 @@
-li {
-  float: left;
+html, body {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
-i {
-  color: red;
+.navbar {
+  background-color: green;
+}
+.navbar ul {
+  list-style-type: none;
+  overflow: hidden;
+  margin: 0;
+}
+.navbar li {
+  float: left;
+}
+.navbar li a {
+  padding: 15px;
+  text-decoration: none;
+}
+.navbar .active {
+  background-color: grey;
+}
+
+.welcome {
+  width: 100%;
+  height: 100vh;
+  background-color: blue;
+  overflow: hidden;
+}
+
+.welcome h1 {
+  margin-top: 100px;
+  margin-left: 200px;
+}
+.welcome h4 {
+  margin-top: 150px;
+  margin-left: 800px;
+}
+.welcome i {
+  margin: 100px;
+}
+
+.home_main {
+  height: 100vh;
+}
+
+.share_main {
+  background-color: pink;
+  height: 100%;
+  overflow: hidden;
+}
+.share_main h1 {
+  margin: 15px;
+}
+.share_main .container {
+  margin: 0;
+  position: absolute;
+  height: 10rem;
+  width: 30rem;
+  top: 50%;
+  left: 48%;
+  transform: translate(-50%, -50%);
+}
+.share_main .container button {
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=style.css.map */
