--- a/public/assets/style.scss
+++ b/public/assets/style.scss
@@ -1,7 +1,72 @@
-li {
-    float: left
+html,body {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
-i{
-    color: red;
+.navbar{
+    background-color: green;
+    ul {
+        list-style-type: none;
+        overflow: hidden;
+        margin: 0;
+    }
+    li {
+        float: left;
+    }
+    li a {
+        padding: 15px;
+        text-decoration: none;
+    }
+    .active {
+        background-color: grey;
+    }
+}
+
+.welcome {
+    width: 100%;
+    height: 100vh;
+    background-color: blue;
+    overflow: hidden;
+}
+.welcome {
+    h1{
+        margin-top: 100px;
+        margin-left: 200px;
+    }
+    h4 {
+        margin-top: 150px;
+        margin-left: 800px;
+    }
+    i {
+        margin: 100px;
+    }
+}
+
+.home_main {
+    height: 100vh;
+}
+
+.share_main {
+    background-color: pink;
+    height: 100%;
+    overflow: hidden;
+    h1 {
+        margin: 15px;
+    }
+    .container {
+        margin: 0;
+        position: absolute;
+        height: 10rem;
+        width: 30rem;
+        top: 50%;
+        left: 48%;
+        transform: translate(-50%,-50%);
+
+        button {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
