mycket ny skit, mestadels med posts

--- a/public/assets/style.scss
+++ b/public/assets/style.scss
@@ -47,6 +47,9 @@ html,body {
 .home_main {
     height: 100vh;
 }
+.indpost {
+    border: solid 2px black;
+}
 
 .share_main {
     background-color: pink;
