--- a/views/share.ejs
+++ b/views/share.ejs
@@ -25,6 +25,7 @@
         <div class="container">
             <h5>Of course you do, upload them here:</h5>    
             <button>Share Your Recepies</button>
+            <li><a href="/post">test</a></li>
         </div>
     </div>
 
