--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -47,6 +47,10 @@ html, body {
   height: 100vh;
 }
 
+.indpost {
+  border: solid 2px black;
+}
+
 .share_main {
   background-color: pink;
   height: 100%;
