--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,8 +30,16 @@
     <div class="home_main">
         <h3>Top recepies:</h3>
 
-        <div class="posts">
-
+        <div class="post">
+            <% data.forEach(function (post) { %>
+                <% if(post.text3 != ''){ %>
+                <div class="eachpost">
+                    <img src="<%= post.text3 %>">
+                    <% } %>
+                    <a href="default<%=post.id%>"><%= post.text1 %></a>
+                    <p><%= post.text2 %></p>
+                </div>
+            <% }) %>
         </div>
     </div>
 
