--- a/views/post.ejs
+++ b/views/post.ejs
@@ -10,15 +10,15 @@
    <h2>
        Skriva till databas
    </h2>
-   <a href="/">Go back</a>
+   <a href="/share">Go back</a>
    <br/><br/>
-   <form action="/a" method="POST">
+   <form action="/post" method="POST" enctype="multipart/form-data">
        <label for="title">Title:</label>
-       <input type="text" name="title" /><br/><br/>
+       <input type="text" name="title" id="title"/><br/><br/>
        <label for="text">Text:</label>
-       <input type="text" name="text" /><br/><br/>
+       <input type="text" name="text" id="text" /><br/><br/>
        <label for="img">Image:</label>
-       <input type="file" accept="image/*" name="img" /><br/>
+       <input type="file" accept="image/*" name="img" id="img"/><br/>
        <button type="submit">Ok</button>
    </form>
 </body>
