--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
                 <div class="eachpost">
                     <img src="<%= post.text3 %>">
                     <% } %>
-                    <a href="default<%=post.id%>"><%= post.text1 %></a>
+                    <a href="/recipe/<%= post.id %>"><%= post.text1 %></a>
                     <p><%= post.text2 %></p>
                 </div>
             <% }) %>
