--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= post.text1 %></title>
+    <title><%= recipe.text1 %></title>
 </head>
 <body>
-    <h1><%= post.text1  %></h1>
+    <h1><%= recipe.text1 %></h1>
     <div class="imgContainer">
-        <img src="<%= post.text3 %>">
+        <img src="<%= recipe.text3 %>">
     </div>
 
     <div class="textContainer">
-        <p><%= post.text2 %></p>
+        <p><%= recipe.text2 %></p>
     </div>
 </body>
 </html>
