--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
-    <script src="https://kit.fontawesome.com/4f32920e14.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -15,9 +14,21 @@
             <li><a class="share" href="/share">Share your recepies</a></li>
             <li><a class="favourite" href="/favourite">Favourite recepies *</a></li>
             <li><a class="grocery" href="/grocery">Grocery list</a></li>
-            <li><a class="active" href="/signin">Sign in</a></li>
-            <li><a class="signup" href="/signup">Sign up</a></li>
+            <li><a class="active" href="/login">Login</a></li>
         </ul>
     </div>
+
+
+    <form action="/register" method="POST">
+        <label for="username">Username:</label>
+        <input type="text" name="username" id="username" required/><br/><br/>
+        <label for="email">Email:</label>
+        <input type="text" name="email" id="email" required/><br/><br/>
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password"/><br/><br/>
+        <button type="submit">Login</button><br/>
+
+        <p>Already have an account? <a href="/login"><strong>Login</strong></a></p>
+    </form>
 </body>
 </html>
