--- a/views/share.ejs
+++ b/views/share.ejs
@@ -15,8 +15,7 @@
             <li><a class="active" href="/share">Share your recepies</a></li>
             <li><a class="favourite" href="/favourite">Favourite recepies *</a></li>
             <li><a class="grocery" href="/grocery">Grocery list</a></li>
-            <li><a class="signin" href="/signin">Sign in</a></li>
-            <li><a class="signup" href="/signup">Sign up</a></li>
+            <li><a class="login" href="/login">Login</a></li>
         </ul>
     </div>
 
