--- a/views/post.ejs
+++ b/views/post.ejs
@@ -15,8 +15,10 @@
    <form action="/post" method="POST" enctype="multipart/form-data">
        <label for="title">Title:</label>
        <input type="text" name="title" id="title"/><br/><br/>
-       <label for="text">Text:</label>
-       <input type="text" name="text" id="text" /><br/><br/>
+       <label for="ingredients">ingredients:</label>
+       <input type="text" name="ingredients" id="ingredients"/><br/><br/>
+       <label for="instructions">instructions:</label>
+       <input type="text" name="instructions" id="instructions"/><br/><br/>
        <label for="img">Image:</label>
        <input type="file" accept="image/*" name="img" id="img"/><br/>
        <button type="submit">Ok</button>
