--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -12,8 +12,14 @@
         <img src="<%= recipe.text3 %>">
     </div>
 
-    <div class="textContainer">
-        <p><%= recipe.text2 %></p>
+    
+    <div>
+        <h4><%=recipe.ingredients%></h4>
+    </div>
+
+
+    <div class="instructionsContainer">
+        <p><%= recipe.instructions %></p>
     </div>
 </body>
 </html>
