--- a/views/grocery.ejs
+++ b/views/grocery.ejs
@@ -38,5 +38,15 @@
       <% items.forEach(item => { %>
         <li><%= item %></li>
       <% }); %>
+      
+      <div class="cartgroc">
+        <% if (cart && cart.length > 0) { %>
+          <% cart.forEach(cart => { %>
+            <li><%= cart.ingredients %></li>
+          <% }); %>
+        <% } else { %>
+          <p>Your cart is empty.</p>
+        <% } %>
+      </div>
 </body>
 </html>
