--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,7 +18,6 @@
         </ul>
     </div>
 
-
     <form action="/register" method="POST">
         <label for="username">Username:</label>
         <input type="text" name="username" id="username" required/><br/><br/>
@@ -26,9 +25,27 @@
         <input type="text" name="email" id="email" required/><br/><br/>
         <label for="password">Password:</label>
         <input type="password" name="password" id="password"/><br/><br/>
-        <button type="submit">Login</button><br/>
+        <button type="submit">Register</button><br/>
 
         <p>Already have an account? <a href="/login"><strong>Login</strong></a></p>
     </form>
+
+    <div>
+        <% if (errors) { %>
+            <% errors.forEach(function(error) { %>
+                <div class="alert alert-danger"><%= error.msg %></div>
+            <% }); %>
+        <% } %>
+
+        <% if (errorMessage) { %>
+            <div><%= errorMessage %></div>
+        <% } %>
+    </div>
+
+    <div>
+        <br>
+        <h3>Why become a member?</h3>
+        <p>Because you can share your own recepies</p>
+    </div>
 </body>
 </html>
