--- a/views/grocery.ejs
+++ b/views/grocery.ejs
@@ -8,19 +8,19 @@
     <script src="https://kit.fontawesome.com/4f32920e14.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
-<body>
+<body class="body-groc">
     <div class="navbar">
         <ul>
-            <li><a class="home" href="/home">Home</a></li>
-            <li><a class="share" href="/share">Share your recepies</a></li>
-            <li><a class="favourite" href="/favourite">Favourite recepies *</a></li>
-            <li><a class="active" href="/grocery">Grocery list</a></li>
-            <li><a class="login" href="/login">Login</a></li>
+          <li class="home"><a href="/home">Home</a></li>
+          <li class="share"><a href="/share">Share your recipes</a></li>
+          <li class="favourite"><a href="/favourite">Favourite recipes <i class="fa-solid fa-star"></i></a></li>
+          <li class="active"><a href="/grocery">Grocery list</a></li>
+          <li class="login"><a href="/login">Login</a></li>
         </ul>
     </div>
 
-    <ul>
-      </ul>
+    <ul class="groceries">
+      <h2>Grocery list:</h2>
       <form action="/add" method="post">
         <label for="item">Add Item:</label>
         <input type="text" id="item" name="item" required>
@@ -36,13 +36,15 @@
         <button type="submit">Remove</button>
       </form>
       <% items.forEach(item => { %>
-        <li><%= item %></li>
+        <li class="groc-item"><%= item %></li>
       <% }); %>
+    </ul>
       
       <div class="cartgroc">
+        <h2>This is your cart for added groceries from recipes</h2>
         <% if (cart && cart.length > 0) { %>
           <% cart.forEach(cart => { %>
-            <li><%= cart.ingredients %></li>
+            <li><strong><%= cart.text1 %>:</strong> <%= cart.ingredients %></li>
           <% }); %>
         <% } else { %>
           <p>Your cart is empty.</p>
