--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,11 +12,11 @@
 <body>
     <div class="navbar">
         <ul>
-            <li><a class="active" href="/home">Home</a></li>
-            <li><a class="share" href="/share">Share your recepies</a></li>
-            <li><a class="favourite" href="/favourite">Favourite recepies *</a></li>
-            <li><a class="grocery" href="/grocery">Grocery list</a></li>
-            <li><a class="login" href="/login">Login</a></li>
+            <li class="active"><a href="/home">Home</a></li>
+            <li class="share"><a href="/share">Share your recipes</a></li>
+            <li class="favourite"><a href="/favourite">Favourite recipes <i class="fa-solid fa-star"></i></a></li>
+            <li class="grocery"><a href="/grocery">Grocery list</a></li>
+            <li class="login"><a href="/login">Login</a></li>
         </ul>
     </div>
 
@@ -27,28 +27,29 @@
     </div>
 
     <div class="home_main">
-        <h3>Top recepies:</h3>
-
-        <div class="post">
-            <li class="eachpost">
-                <% data.forEach(function (post) { %>
+        <h1>Most recent posts:</h1>
+        <li class="posts">
+            <% data.forEach(function (post) { %>
+                <div class="eachpost">
                     <a href="/recipe/<%= post.id %>">
-                        <%= post.text1 %>
+                        <h2><%= post.text1 %></h2>
                         <% if(post.text3 != ''){ %>
                             <img src="<%= post.text3 %>">
                         <% } %>
                     </a>
-                <form action="/addcart" method="POST">
-                    <input type="hidden" name="ingredients" value="<%= post.ingredients %>">
-                    <button type="submit">Add to cart</button>
-                </form>
-                <form action="addfav" method="POST">
-                    <input type="hidden" name="favId" value="<%= post.id %>">
-                    <button type="submit">Add to favourites</button>
-                </form>
-                <% }) %>
-            </li>
-        </div>
+                    <form action="/addcart" method="POST">
+                        <input type="hidden" name="title" value="<%= post.text1 %>">
+                        <input type="hidden" name="ingredients" value="<%= post.ingredients %>">
+                        <button type="submit" title="Add to cart" class="btncart"><i class="fa-solid fa-basket-shopping"></i></button>
+                    </form>
+                    <form action="addfav" method="POST">
+                        <input type="hidden" name="favId" value="<%= post.id %>">
+                        <button type="submit" title="add to favourites"><i class="fa-regular fa-star"></i></button>
+                    </form>
+                </div>
+            <% }) %>
+        </li>
+
     </div>
 
 </body>
